<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".AddEntryActivity">

    <TextView
        android:id="@+id/newEntryTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/chewy"
        android:text="@string/new_entry_title_text"
        android:textColor="@color/brown1"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_entry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/brown2"
        android:fontFamily="@font/chewy"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/add_entry_submit_text"
        android:textColor="@color/pale"
        android:textSize="30sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rounded_corner"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newEntryTitleText">

        <EditText
            android:id="@+id/editTextEntryTitle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"

            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"

            android:inputType="textPersonName"
            android:fontFamily="@font/chewy"
            android:hint="@string/new_entry_title_input"
            android:textColorHint="@color/cream"
            android:textColor="@color/brown2"
            android:backgroundTint="@color/brown2"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rounded_corner"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="48dp"

            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"

            android:fontFamily="@font/chewy"
            android:textColor="@color/brown2"
            android:textSize="20sp"

            android:text="@string/date_input_text" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"

            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"

            android:inputType="textPersonName"
            android:fontFamily="@font/chewy"
            android:hint="@string/date_input"
            android:textColorHint="@color/cream"
            android:textColor="@color/brown2"
            android:backgroundTint="@color/brown2"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rounded_corner"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <EditText
            android:id="@+id/editTextEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"

            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"

            android:lines="15"
            android:gravity="top|start"
            android:fontFamily="@font/chewy"
            android:hint="@string/new_entry_input"
            android:textColor="@color/brown2"
            android:textColorHint="@color/cream"
            android:background="@null"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>